# digital-organizer

./: .gitignore  AUTH_README.md  README.md  package.json  start-dev.sh
backend/: env.example  main.py  main_fixed.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  test_imports.py
backend/app/: database.py
backend/app/api/: auth.py  deps.py  screenshots.py
backend/app/core/: config.py  security.py
backend/app/models/: screenshot.py  user.py
backend/app/schemas/: auth.py  screenshot.py
frontend/: README.md  deploy.md  env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: AddCategoryModal.jsx  AddScreenshotModal.jsx  CategoryBadge.jsx  Footer.jsx  Header.jsx  LanguageSwitcher.jsx  LoadingSkeleton.jsx  ProtectedRoute.jsx  ScreenshotCard.jsx  ScreenshotImage.jsx  TagBadge.jsx
frontend/src/contexts/: AuthContext.jsx  LanguageContext.jsx
frontend/src/hooks/: useLanguage.js
frontend/src/locales/: en.js  ru.js
frontend/src/pages/: About.jsx  AddLink.jsx  Bookmarks.jsx  Categories.jsx  Donate.jsx  ForgotPassword.jsx  Home.jsx  Login.jsx  NotFound.jsx  Register.jsx  ResetPassword.jsx  TestPage.jsx
frontend/src/utils/: api.js  useCategories.js
