[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-organizer-backend"
version = "1.0.0"
description = "Backend для Цифрового Органайзера"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "sqlalchemy>=2.0.41",
    "alembic>=1.16.4",
    "pydantic>=2.11.7",
]

[tool.pyright]
venvPath = "."
venv = "venv"
pythonVersion = "3.11"
pythonPlatform = "Darwin"
extraPaths = ["."]
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
autoImportCompletions = true 